# TS-SSL-Task-Specific-Self-Supervised-Learning-for-Digital-Pathology

./: LICENSE  README.md  pyproject.toml  requirements.txt
configs/: patch_classification.yaml  pretrain.yaml  wsi_classification.yaml
scripts/: extract_wsi_features.py
ts_ssl/: __init__.py  cli.py
ts_ssl/data/: __init__.py  datasets.py  transforms.py
ts_ssl/engine/: __init__.py  extract.py  pretrain.py  train_patch.py  train_wsi.py  visualize.py
ts_ssl/models/: __init__.py  attention.py  heads.py  scae.py
ts_ssl/utils/: __init__.py  common.py  metrics.py
